# mplane-plugin

./: CMakeLists.txt  README.md  info.json  qMPlane.cpp  qMPlane.h  qMPlane.qrc
qMPlane/: CMakeLists.txt  README.md  qMPlane.cpp
qMPlane/src/: CMakeLists.txt  ccItemTree.cpp  ccMPlaneDlgController.h  ccMPlanePoint.cpp  ccMPlanePoint.h  ccMeasurementRecorder.cpp  ccMeasurementRecorder.h
qMPlane/tests/: item_tree_test.cpp  main.cpp
qMPlane/tests/mocks/: ccGenericGLDisplayMock.h
qMPlane/ui/: CMakeLists.txt  mplaneDlg.ui
src/: CMakeLists.txt  ccItemTree.h  ccMPlaneDlg.cpp  ccMPlaneDlg.h  ccMPlaneDlgController.cpp  ccMPlaneErrors.h  ccMPlanePoint.cpp  ccMeasurementDevice.cpp  ccMeasurementDevice.h
tests/: CMakeLists.txt
tests/mocks/: ccMainAppInterfaceMock.h
ui/: CMakeLists.txt
